<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivError"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/client_not_started_error_pic"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toTopOf="@id/tvCantStartChat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvCantStartChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/can_not_start_client_chat"
            android:textColor="@color/snow"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tvLetsTryAgain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivError" />

        <TextView
            android:id="@+id/tvLetsTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_margin"
            android:text="@string/let_s_retry"
            android:textColor="@color/snow"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/btnRetry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCantStartChat" />

        <TextView
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/fourty_margin"
            android:background="@drawable/btn_selector_virgil_gray"
            android:elevation="2dp"
            android:gravity="center"
            android:minHeight="36dp"
            android:paddingEnd="@dimen/default_margin"
            android:paddingStart="@dimen/default_margin"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/snow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsTryAgain" />

        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/fourty_margin"
            android:background="@drawable/btn_selector_virgil_gray"
            android:elevation="2dp"
            android:gravity="center"
            android:minHeight="36dp"
            android:paddingEnd="@dimen/default_margin"
            android:paddingStart="@dimen/default_margin"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/snow"
            app:layout_constraintBottom_toBottomOf="@+id/btnRetry"
            app:layout_constraintStart_toEndOf="@+id/btnRetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.sdsmdg.harjot.vectormaster.VectorMasterView
        android:id="@+id/ivLoading"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:vector_src="@drawable/ic_virgil_logo_shield"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvInitializing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initializing"
        android:layout_marginTop="112dp"
        android:textColor="@color/yesterdaySnow"
        android:textSize="@dimen/default_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivLoading" />

</androidx.constraintlayout.widget.ConstraintLayout>
